# tktr

./: .gitignore  Makefile  README.md
src/: Makefile.am  action.h  actor.h  cli.cpp  cli.h  configure.ac  filestore.h  readme.md  storage.h  tktr.cpp
src/client/: Makefile.am  tktr.cpp
src/server/: Makefile.am  tktrd.cpp
